[tool.poetry]
name = "webcheck"
version = "0.1.0"
description = "web monitoring"
authors = ["Paul Sorenson <pms@luke.home.metrak.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
